infra/k8s/app-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app
spec:
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
        - name: golang-app
          image: bhborkar91/golang-rest
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: golang-app
spec:
  selector:
    app: golang-app
  ports:
    - port: 4000
      targetPort: 4000
