infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-app-ingress
  labels:
    name: golang-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: golang-rest.local
      http:
        paths:
          - pathType: Prefix
            path: "/.*"
            backend:
              service:
                name: golang-app
                port:
                  number: 4000
